# Bayucaraka-Final-Project-Kelompok-2-2024

./: README.md
Electrical/Bayucaraka_Final_Project/: Bayucaraka_Final_Project.cpp  Bayucaraka_Final_Project.ino
Programming/src/stepper_control/: CMakeLists.txt  package.xml
Programming/src/stepper_control/src/: stepper_node.cpp
Programming/src/webcam_camera/: CMakeLists.txt  package.xml
Programming/src/webcam_camera/src/: camera_node.cpp
